--- a/src/views/crud.ejs
+++ b/src/views/crud.ejs
@@ -44,11 +44,11 @@
 
                         <div class="form-group col-md-6">
                             <label for="inputEmail4">First name</label>
-                            <input type="text" class="form-control" placeholder="Email" name="firstName">
+                            <input type="text" class="form-control" placeholder="First name" name="firstName">
                         </div>
                         <div class="form-group col-md-6">
                             <label for="inputPassword4">Last name</label>
-                            <input type="text" class="form-control" name="lastName" placeholder="Password">
+                            <input type="text" class="form-control" name="lastName" placeholder="Last name">
                         </div>
                     </div>
 
